--- a/vite-project/src/Components/product.css
+++ b/vite-project/src/Components/product.css
@@ -2,7 +2,7 @@
     padding-top: 120px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(242, 234, 234);
+    background-color: #f3f3f3;
 }
 
 .heading{
@@ -76,7 +76,6 @@
         display: flex;
         height: 60px;
         font-size: 25px;
-        
         width: 100%;
         margin-bottom: 0px;
        
@@ -102,11 +101,13 @@
       background-color:#fc2779;
       color: white;
      }
-     
+     #bag:hover{
+      background-color: #c21054;
+     }
   
     #chakra{
       width: 23%;
-    
+      height: 100%;
       display: flex;
       flex-direction: column;
       gap: 16px;
