--- a/vite-project/src/Components/product.css
+++ b/vite-project/src/Components/product.css
@@ -43,7 +43,8 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        height: 500px;
+        /* height: 500px;  wrong way*/
+        height: fit-content;
         border-radius:5px;
         /* border: 1px solid rgb(213, 205, 205); */
         background-color: white;
@@ -51,7 +52,7 @@
      }
      #item>div>img{
         width: 100%;
-        height: 280px;
+        height: 260px;
         border-radius:5px;
      }
 
@@ -77,7 +78,7 @@
         height: 60px;
         font-size: 25px;
         width: 100%;
-        margin-bottom: 0px;
+        margin-bottom: 5px;
        
      }
     
